PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 4.8.4-Sokndal
7 November 2013

- pts-core: Allow web browsers and graphics tests to work on $WAYLAND_DISPLAY when $DISPLAY is not set
- pts-core: Fix for libstdc++ on Gentoo external dependency
- pts-core: Add a ResultScale XML tag option for the results-parser to provide custom ResultScale values depending upon selected parser option
- pts-core: Add a ResultProportion XML tag option for the results-parser to provide custom result proportion values depending upon selected parser option
- pts-core: Add ResultPrecision XML tag to results-parser for setting math precision of decimal points on result (default remains 2)
- pts-core: Add support for writing to $INSTALL_FOOTNOTE during test installations to report custom footnote on generated graphs
- pts-core: Add SuiteSparse, TinyXML, DUNE external dependencies
- pts-core: Add opencl header external dependencies for more platforms
- pts-core: Refresh OpenBenchmarking.org repository index data file once upon hitting missing test profile
- pts_Graph: Improve precision of increments for graph results with sub-1 values
- phodevi: Protect against "undefined" memory strings from DMI data
- phodevi: Add Wayland Weston version detection
- phodevi: Detect gnome-shell-wayland
- phodevi: Add support for CPU node-count property for number of physical CPU nodes

Phoronix Test Suite 4.8.3-Sokndal
2 October 2013

- pts-core: Fix openmpi on Gentoo external dependency
- pts-core: Detect graphics comparison when GPU changes with audio string
- pts-core: Don't use HTTPS on proxies when connecting to OpenBenchmarking.org
- pts-core: Add VersionSpecific capability to external dependencies handling for package(s) that may only be in certain OS versions
- pts-core: Ensure xscreensaver is deactivated
- pts-core: Support toggling GNOME3 screensaver on GNOME 3.8+ where org.gnome.desktop.screensaver idle-activation-enabled -> org.gnome.desktop.session idle-delay