@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- phodevi: Add support for Nouveau PSTATE parsing on Linux 3.13+
+
 Phoronix Test Suite 4.8.4-Sokndal
 7 November 2013
 
